--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper">
     <div class="card">
-      <h1>Missile Performance Toolkit</h1>
+      <h1>Missile Performance</h1>
       <div class="subtitle">
         Engine, injector and nozzle performance using ideal rocket relations.
       </div>
